--- a/public/assets/backend/css/custom.css
+++ b/public/assets/backend/css/custom.css
@@ -234,7 +234,7 @@ th {
 .topnav .navbar-nav .dropdown-item:hover,
 .topnav .navbar-nav .nav-item .nav-link.active,
 .topnav .navbar-nav .nav-item .nav-link.active svg {
-    color: #125293 !important;
+    color: #28bebd !important;
     background: #e7e7e7 !important;
     font-weight: 600 !important;
 }
